[gd_scene load_steps=33 format=3 uid="uid://c3dlris3p6ytw"]

[ext_resource type="PackedScene" uid="uid://uhmn6jvb8pf2" path="res://src/unit/character/enemy/enemy.tscn" id="1_knmh1"]
[ext_resource type="Script" uid="uid://bn7p6xfuby5bp" path="res://src/unit/character/enemy/rum/rum.gd" id="2_73k5a"]
[ext_resource type="Shader" uid="uid://d003qi8qm71iu" path="res://src/asset/shader/hurt_flash.gdshader" id="2_o05rc"]
[ext_resource type="Texture2D" uid="uid://bsek6osmjhqvq" path="res://asset/texture/unit/enemy/rum/idle.webp" id="3_o05rc"]
[ext_resource type="Texture2D" uid="uid://pwj7eq3ocbp8" path="res://asset/texture/unit/enemy/rum/walk.webp" id="4_eb6e2"]
[ext_resource type="Script" uid="uid://cjlyed3rdu8i8" path="res://src/unit/common/behavior_tree/sequence.gd" id="5_bi027"]
[ext_resource type="Texture2D" uid="uid://bdchjtigos1qn" path="res://asset/texture/unit/enemy/rum/attack.webp" id="5_lsuc0"]
[ext_resource type="Script" uid="uid://dsd2h2jexq7ig" path="res://src/unit/character/enemy/behavior/is_alive.gd" id="6_p1b8h"]
[ext_resource type="Script" uid="uid://be7bgphyblv17" path="res://src/unit/character/enemy/behavior/is_knockback.gd" id="7_ojab4"]
[ext_resource type="Script" uid="uid://b5skciich7bs3" path="res://src/unit/common/behavior_tree/inverter.gd" id="8_auqw3"]
[ext_resource type="Script" uid="uid://cp6fi8qibdmcj" path="res://src/unit/character/enemy/behavior/is_falling.gd" id="9_7cg4t"]
[ext_resource type="Script" uid="uid://dndwb24t0am6q" path="res://src/unit/character/enemy/behavior/turn_by_checker.gd" id="10_2ice5"]
[ext_resource type="Script" uid="uid://hjo2hvko5sdk" path="res://src/unit/common/behavior_tree/selector.gd" id="11_ojab4"]
[ext_resource type="Script" uid="uid://j1g8lbwu4scg" path="res://src/unit/character/enemy/behavior/ground_move.gd" id="11_q1wow"]
[ext_resource type="Script" uid="uid://bs480x2rmfh84" path="res://src/unit/character/enemy/rum/behavior/seek_player.gd" id="12_ojab4"]
[ext_resource type="Script" uid="uid://cfgiis6pfterb" path="res://src/unit/character/enemy/behavior/turn_by_player_location.gd" id="13_2ice5"]
[ext_resource type="Script" uid="uid://dlfubv7fe53h2" path="res://src/unit/character/enemy/behavior/idle.gd" id="13_auqw3"]
[ext_resource type="Script" uid="uid://dbn0d0l1k1vaj" path="res://src/unit/character/enemy/behavior/wait_animation.gd" id="14_7cg4t"]
[ext_resource type="Script" uid="uid://bkikt1rhlnjj6" path="res://src/unit/common/behavior_tree/waiter.gd" id="16_q1wow"]
[ext_resource type="Script" uid="uid://c3pjs6vch2a7c" path="res://src/unit/character/enemy/rum/behavior/attack.gd" id="16_v4mx6"]
[ext_resource type="Script" uid="uid://dpc55pwc4at2q" path="res://src/unit/character/enemy/rum/behavior/wait_player_leave.gd" id="18_qtwo5"]
[ext_resource type="Texture2D" uid="uid://c8immo568egs3" path="res://asset/texture/unit/enemy/rum/hurt.webp" id="21_2nhfq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eb6e2"]
resource_local_to_scene = true
shader = ExtResource("2_o05rc")
shader_parameter/flash_amount = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eb6e2"]
size = Vector2(10, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lsuc0"]
size = Vector2(12, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o05rc"]
size = Vector2(12, 19)

[sub_resource type="Animation" id="Animation_o05rc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_o05rc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ickoj"]
resource_name = "attack"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_lsuc0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_73k5a"]
resource_name = "hurt"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("21_2nhfq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_eb6e2"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_o05rc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lsuc0"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_eb6e2")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lsuc0"]
_data = {
&"RESET": SubResource("Animation_o05rc"),
&"attack": SubResource("Animation_ickoj"),
&"hurt": SubResource("Animation_73k5a"),
&"idle": SubResource("Animation_eb6e2"),
&"walk": SubResource("Animation_lsuc0")
}

[node name="Rum" instance=ExtResource("1_knmh1")]
script = ExtResource("2_73k5a")
enemy_name = &"rum"

[node name="Sprite2D" parent="Graphics" index="0"]
material = SubResource("ShaderMaterial_eb6e2")
position = Vector2(0, -8)
texture = ExtResource("3_o05rc")

[node name="CollisionShape2D" parent="Graphics/Hitbox" index="0"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_eb6e2")

[node name="CollisionShape2D" parent="Graphics/Hurtbox" index="0"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_lsuc0")

[node name="AttackPoint" type="Marker2D" parent="Graphics" index="3"]
position = Vector2(0, -8)

[node name="WallChecker" type="RayCast2D" parent="Graphics" index="4"]
position = Vector2(0, -1)
target_position = Vector2(8, 0)
collision_mask = 513

[node name="GroundChecker" type="RayCast2D" parent="Graphics" index="5"]
position = Vector2(7, -1)
target_position = Vector2(0, 2)
collision_mask = 3

[node name="CollisionShape2D" parent="." index="3"]
position = Vector2(0, -9.5)
shape = SubResource("RectangleShape2D_o05rc")

[node name="LeftChecker" type="RayCast2D" parent="." index="4"]
position = Vector2(0, -8)
target_position = Vector2(-320, 0)
collision_mask = 5

[node name="RightChecker" type="RayCast2D" parent="." index="5"]
position = Vector2(0, -8)
target_position = Vector2(320, 0)
collision_mask = 5

[node name="Sequence" type="Node" parent="BehaviorTree" index="0"]
script = ExtResource("5_bi027")

[node name="IsAlive" type="Node" parent="BehaviorTree/Sequence" index="0"]
script = ExtResource("6_p1b8h")

[node name="IsKnockback" type="Node" parent="BehaviorTree/Sequence" index="1"]
script = ExtResource("7_ojab4")

[node name="Inverter" type="Node" parent="BehaviorTree/Sequence" index="2"]
script = ExtResource("8_auqw3")

[node name="IsFalling" type="Node" parent="BehaviorTree/Sequence/Inverter" index="0"]
script = ExtResource("9_7cg4t")

[node name="TurnByChecker" type="Node" parent="BehaviorTree/Sequence" index="3" node_paths=PackedStringArray("checkers")]
script = ExtResource("10_2ice5")
checkers = [NodePath("../../../Graphics/WallChecker"), NodePath("../../../Graphics/GroundChecker")]
checkers_logic = Array[bool]([true, false])

[node name="Selector" type="Node" parent="BehaviorTree/Sequence" index="4"]
script = ExtResource("11_ojab4")
metadata/_custom_type_script = "uid://hjo2hvko5sdk"

[node name="Inverter" type="Node" parent="BehaviorTree/Sequence/Selector" index="0"]
script = ExtResource("8_auqw3")
metadata/_custom_type_script = "uid://b5skciich7bs3"

[node name="SeekPlayer" type="Node" parent="BehaviorTree/Sequence/Selector/Inverter" index="0"]
script = ExtResource("12_ojab4")
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="Sequence" type="Node" parent="BehaviorTree/Sequence/Selector" index="1"]
script = ExtResource("5_bi027")
metadata/_custom_type_script = "uid://cjlyed3rdu8i8"

[node name="TurnToPlayer" type="Node" parent="BehaviorTree/Sequence/Selector/Sequence" index="0"]
script = ExtResource("13_2ice5")
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="Idle" type="Node" parent="BehaviorTree/Sequence/Selector/Sequence" index="1"]
script = ExtResource("13_auqw3")
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="WaitAttackAnim" type="Node" parent="BehaviorTree/Sequence/Selector/Sequence" index="2"]
script = ExtResource("14_7cg4t")
animation_name = &"attack"
wait_offset = -0.1
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="TurnToPlayer2" type="Node" parent="BehaviorTree/Sequence/Selector/Sequence" index="3"]
script = ExtResource("13_2ice5")
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="Attack" type="Node" parent="BehaviorTree/Sequence/Selector/Sequence" index="4"]
script = ExtResource("16_v4mx6")
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="Waiter" type="Node" parent="BehaviorTree/Sequence/Selector/Sequence" index="5"]
script = ExtResource("16_q1wow")
time = 0.1
metadata/_custom_type_script = "uid://bkikt1rhlnjj6"

[node name="Idle2" type="Node" parent="BehaviorTree/Sequence/Selector/Sequence" index="6"]
script = ExtResource("13_auqw3")
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="WaitPlayerLeave" type="Node" parent="BehaviorTree/Sequence/Selector/Sequence" index="7"]
script = ExtResource("18_qtwo5")
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="GroundMove" type="Node" parent="BehaviorTree/Sequence" index="5"]
script = ExtResource("11_q1wow")
speed = 20.0

[node name="HealthBar" parent="." index="9"]
offset_top = -22.0
offset_bottom = -21.0

[node name="AnimationPlayer" parent="." index="10"]
libraries = {
&"": SubResource("AnimationLibrary_lsuc0")
}
